--- a/html/EatON.css
+++ b/html/EatON.css
@@ -1,23 +1,29 @@
 body
 {
 	margin-left: 10px;
-	background-color: #ff0000;
-
+	font-family: Georgia, serif;
+	color: #2F3848;
 }
 
 li
 {
 	margin-left: 10px;
 	list-style: none;
+	font-family: Georgia, serif;
 }
 
 button
 {
 	margin-left: 10px;
+	font-family: Georgia, serif;
 }
 
 .contentcontainer{
-	display: block;
 	width: 60%;
-	margin: 0 auto;
+	margin-left: auto;
+	margin-right: auto;
 }
+ h3{
+ 	font-family: Georgia, serif;
+ 	color: #2F3848;
+ }
