--- a/html/EatON.css
+++ b/html/EatON.css
@@ -19,7 +19,6 @@ button
 }
 
 .contentcontainer{
-	width: 60%;
 	margin-left: auto;
 	margin-right: auto;
 }
@@ -27,3 +26,12 @@ button
  	font-family: Georgia, serif;
  	color: #2F3848;
  }
+
+ .banner{
+	display: block;
+ 		margin-left: auto;
+ 		margin-right: auto;
+ 		margin-bottom: 20px;
+		width: 60%;
+		height: auto;
+	}
