--- a/html/EatON.css
+++ b/html/EatON.css
@@ -37,10 +37,10 @@ button
 	}
 
 	.form{
+	align-content: center;
 	display: block;
  	margin-left: auto;
  	margin-right: auto;
- 	margin-bottom: 20px;
 	width: 60%;
 	height: auto;
 	}
