--- a/html/EatON.css
+++ b/html/EatON.css
@@ -37,7 +37,7 @@ button
 	}
 
 	.form{
-	align-content: center;
+	justify-content: center;
 	display: block;
  	margin-left: auto;
  	margin-right: auto;
