--- a/html/EatON.css
+++ b/html/EatON.css
@@ -29,15 +29,11 @@ button
 
  .banner{
 	display: block;
- 	margin-left: auto;
- 	margin-right: auto;
- 	margin-bottom: 20px;
-	width: 60%;
-	height: auto;
+ 	margin-left: 50%;
+ 	margin-right: 50%;
 	}
 
 	.form{
-	justify-content: center;
 	display: block;
  	margin-left: auto;
  	margin-right: auto;
