--- a/html/EatON.css
+++ b/html/EatON.css
@@ -29,14 +29,15 @@ button
 
  .banner{
 	display: block;
- 	margin-left: 50%;
- 	margin-right: 50%;
+ 	margin-left: auto;
+ 	margin-right: auto;
+ 	margin-bottom: 20px;
+	width: 60%;
+	height: auto;
 	}
 
 	.form{
 	display: block;
- 	margin-left: auto;
+ 	margin-left: 25%;
  	margin-right: auto;
-	width: 60%;
-	height: auto;
 	}
