--- a/html/EatON.css
+++ b/html/EatON.css
@@ -36,7 +36,7 @@ button:hover{
 
 	.form{
 	display: block;
- 	margin-left: auto;
+ 	margin-left: 50%;
  	margin-right: auto;
  	width: 60%;
  	height: auto;
